tests/ui/errors/snapshots/infer_addition_type_mismatch.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
   ╭─[test.lis:3:11]
 2 │ fn test() {
 3 │   let x = "hello" + 5;
   ·           ─────┬─────
   ·                ╰── cannot add `string` and `int`
 4 │ }
   ╰────
  help: The `+` operator requires both operands to have the same type · code: [infer.type_mismatch]
