tests/ui/errors/snapshots/infer_array_cast_to_interface.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Interface not implemented
   ╭─[test.lis:5:3]
 4 │ fn f(a: Array<int, 3>) -> Sized {
 5 │   a as Sized
   ·   ─────┬────
   ·        ╰── `Array` cannot implement `Sized`
 6 │ }
   ╰────
  help: Built-in types have no Go methods, so they cannot satisfy interfaces. Wrap the value in a struct that implements `Sized` · code: [infer.interface_not_implemented]
