tests/ui/errors/snapshots/infer_array_match_non_exhaustive_full_witness_no_trailing_rest.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `match` is not exhaustive
   ╭─[test.lis:3:3]
 2 │ fn f(arr: Array<bool, 2>) -> int {
 3 │   match arr {
   ·   ────┬────
   ·       ╰── not all patterns covered
 4 │     [true, true] => 3,
   ╰────
  help: Handle the missing case `[false, false]`, e.g. `[false, false] => { ... }` · code: [infer.non_exhaustive]
